Determinando area clicavel

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MeuSite</title>
+    <title>Pagina Vladimir</title>
     <base href="/" />
     <link rel="preload" id="webassembly" />
+    <!-- site icon (favicon) -->
+    <link rel="icon" type="image/png" href="image/SistemaLegado.png" />
     <link rel="stylesheet" href="css/app.css" />
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="MeuSite.styles.css" rel="stylesheet" /> -->
     <link href="manifest.webmanifest" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <!-- apple touch icon fallback to the provided image -->
+    <link rel="apple-touch-icon" sizes="512x512" href="image/SistemaLegado.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="image/SistemaLegado.png" />
     <script type="importmap"></script>
 </head>
 
